--- a/test.css
+++ b/test.css
@@ -1,14 +1,14 @@
 /* these styles are unrelated to the bug; just to serve the test case */
 html, body {
   min-height: 100%;
-  text-align: center;
+  margin: 0;
 }
 
 a {
   display: block;
   position: absolute;
   top: 50%;
-  margin-top: -50px;
+  margin: -50px 0 0 0;
   width: 100%;
   height: 100px;
     
